# EpiTerraPromo

./: README.md  flake.nix  pyproject.toml
src/: colors.tf  inputs.tf  main.tf  modules.tf  outputs.tf  permision.tf  role.tf  role_members.tf  server.tf  terraform.tfvars.json  users.tf
src/modo/: inputs.tf  outputs.tf  role.tf  server.tf  users.tf
src/roles/: colors.tf  inputs.tf  modo.tf  output.tf  permision.tf
