[tool.poetry]
name = "discord-epita-terraform"
version = "1.0.0"
description = ""
authors = ["Jules Lefebvre <jules@cri.epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
# python-openstackclient = "*"
# python-designateclient = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
